feat: add modal

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Utools with Univer</title>
     <meta name="description" content="Opinionated Vite Starter Template" />
   </head>
-  <body class="font-sans dark:text-white dark:bg-hex-333 bg-white text-dark">
+  <body class="font-sans dark:text-white bg-base text-dark">
     <div id="app"></div>
     <noscript>
       <div>Please enable JavaScript to use this application.</div>
